# Autocoder

./: ModelFile  README.md  magic.ipynb  main.py  mcp.json  ollama_connection.py  pyproject.toml
mcp/: mcp_server.py
