[project]
name = "autocoder"
version = "0.1.0"
description = "A lightning-fast local code generation assistant powered by Ollama and Jupyter"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "ipython>=9.11.0",
    "jupyter>=1.1.1",
    "mcp>=1.26.0",
    "ollama>=0.6.1",
]
